# DSA_projekt

./: CMakeLists.txt  main.c
Headers/: beteg.h  betegArray.h  gyogyszer.h  gyogyszerQueue.h  orvos.h  orvosArray.h
Manager/Header/: Labmanager.h  lab1.h  lab2.h  menu1.h  menu5.h
Manager/Src/: Labmanager.c  lab1.c  lab2.c  menu1.c  menu5.c
Shared/Header/: constans.h  errors.h  massages.h
Shared/Src/: errors.c  massages.c
Src/: beteg.c  betegArray.c  gyogyszer.c  gyogyszerQueue.c  orvos.c  orvosArray.c
